review form styling to stop overlap

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -624,7 +624,8 @@ footer > ul > li > h6 {
 }
 
 .shown {
-    display: block;
+    display: flex;
+    margin-top: 0vh
 }
 
 .hidden {
